# ace-music-cli

./: .gitignore  CLAUDE.md  README.md  TODO.md  config.example.toml  pyproject.toml
src/ace_music/: __init__.py  app.py  cli.py  config.py  models.py  player.py
src/ace_music/agents/: __init__.py  anthropic.py  local.py  openai_agent.py  protocol.py
src/ace_music/backends/: __init__.py  comfyui_api.py  local.py  protocol.py  runpod.py  vastai.py
